# jupyter-sage-mcp

./: .gitignore  LICENSE  MYBINDER_STATUS.md  QuickStart.ipynb  README.md  environment.yml  jupyter_config.json  jupyter_mcp_server.py  jupyter_mcp_server_config.json  postBuild  pyproject.toml  requirements.txt  setup.py  simple_jupyter_mcp.py  start  start.bak
config/: claude_config.json
docs/: SETUP.md
notebooks/: sage_mcp_demo.ipynb
src/: mcp_sage_helper.py
src/jupyter_mcp_server/: __init__.py  code_executor.py  kernel_manager.py  notebook_manager.py  server.py  utils.py
